--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -1844,8 +1844,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Compare 3 Models – GLR, Polynomial, RF"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -1860,11 +1867,11 @@
           "output_type": "stream",
           "text": [
             "\n",
-            " Model Performance Comparison:\n",
-            "                     Model      RMSE        AIC       BIC\n",
-            "0  GLR (Linear Regression)  22030.88   92652.74  19435.40\n",
-            "1    Polynomial Regression  21636.91  114711.02  19407.30\n",
-            "2  Random Forest Regressor  21266.70        NaN  19366.98\n"
+            "Model Performance Comparison:\n",
+            "                     Model       RMSE        MAE     R²         AIC        BIC\n",
+            "0  GLR (Linear Regression)  22030.884  15515.171  0.194   92652.740  19435.399\n",
+            "1    Polynomial Regression  21636.911  15137.690  0.222  114711.024  19407.305\n",
+            "2  Random Forest Regressor  21266.702  14848.191  0.249         NaN  19366.982\n"
           ]
         },
         {
@@ -1886,28 +1893,33 @@
         "import seaborn as sns\n",
         "from pyspark.ml.evaluation import RegressionEvaluator\n",
         "\n",
-        "\n",
         "pred_glr = glr_model.transform(regression_test).select(\"SALARY\", \"prediction\").toPandas()\n",
         "pred_poly = poly_glr_max_years_model.transform(polyreg_test).select(\"SALARY\", \"prediction\").toPandas()\n",
         "pred_rf = rf_model.transform(regression_test).select(\"SALARY\", \"prediction\").toPandas()\n",
         "\n",
-        "# Rename prediction column\n",
         "pred_glr.rename(columns={\"prediction\": \"Predicted\"}, inplace=True)\n",
         "pred_poly.rename(columns={\"prediction\": \"Predicted\"}, inplace=True)\n",
         "pred_rf.rename(columns={\"prediction\": \"Predicted\"}, inplace=True)\n",
         "\n",
-        "evaluator = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+        "evaluator_rmse = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+        "evaluator_mae = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"mae\")\n",
+        "evaluator_r2 = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"r2\")\n",
         "\n",
+        "rmse_glr = evaluator_rmse.evaluate(glr_model.transform(regression_test))\n",
+        "rmse_poly = evaluator_rmse.evaluate(poly_glr_max_years_model.transform(polyreg_test))\n",
+        "rmse_rf = evaluator_rmse.evaluate(rf_model.transform(regression_test))\n",
         "\n",
-        "rmse_glr = evaluator.evaluate(glr_model.transform(regression_test))\n",
-        "rmse_poly = evaluator.evaluate(poly_glr_max_years_model.transform(polyreg_test))\n",
-        "rmse_rf = evaluator.evaluate(rf_model.transform(regression_test))\n",
+        "mae_glr = evaluator_mae.evaluate(glr_model.transform(regression_test))\n",
+        "mae_poly = evaluator_mae.evaluate(poly_glr_max_years_model.transform(polyreg_test))\n",
+        "mae_rf = evaluator_mae.evaluate(rf_model.transform(regression_test))\n",
         "\n",
+        "r2_glr = evaluator_r2.evaluate(glr_model.transform(regression_test))\n",
+        "r2_poly = evaluator_r2.evaluate(poly_glr_max_years_model.transform(polyreg_test))\n",
+        "r2_rf = evaluator_r2.evaluate(rf_model.transform(regression_test))\n",
         "\n",
         "aic_glr = glr_model.summary.aic\n",
         "aic_poly = poly_glr_max_years_model.summary.aic\n",
         "\n",
-        "# BIC calculation: n * ln(RMSE²) + k * ln(n)\n",
         "n_glr = regression_test.count()\n",
         "n_poly = polyreg_test.count()\n",
         "n_rf = regression_test.count()\n",
@@ -1923,18 +1935,14 @@
         "results_df = pd.DataFrame({\n",
         "    \"Model\": [\"GLR (Linear Regression)\", \"Polynomial Regression\", \"Random Forest Regressor\"],\n",
         "    \"RMSE\": [rmse_glr, rmse_poly, rmse_rf],\n",
+        "    \"MAE\": [mae_glr, mae_poly, mae_rf],\n",
+        "    \"R²\": [r2_glr, r2_poly, r2_rf],\n",
         "    \"AIC\": [aic_glr, aic_poly, np.nan],\n",
         "    \"BIC\": [bic_glr, bic_poly, bic_rf]\n",
         "})\n",
         "\n",
-        "print(\"\\n Model Performance Comparison:\")\n",
-        "print(results_df.round(2))\n",
-        "\n",
-        "pred_glr[\"Model\"] = \"GLR\"\n",
-        "pred_poly[\"Model\"] = \"Polynomial\"\n",
-        "pred_rf[\"Model\"] = \"Random Forest\"\n",
-        "\n",
-        "combined_pred = pd.concat([pred_glr, pred_poly, pred_rf], ignore_index=True)\n",
+        "print(\"\\nModel Performance Comparison:\")\n",
+        "print(results_df.round(3))\n",
         "\n",
         "plt.figure(figsize=(10, 9))\n",
         "positions = [1, 2, 3]\n",
@@ -1954,9 +1962,22 @@
         "    plt.title(f\"{name}: Actual vs Predicted\")\n",
         "\n",
         "plt.tight_layout()\n",
-        "plt.show()\n",
-        "\n"
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Calculating Log-Likelihood and BIC for PySpark Models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
