added log likelihood

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -48,28 +48,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/ubuntu/assignment-04-BhargaviManyala/.venv/lib/python3.12/site-packages/kaleido/__init__.py:14: UserWarning:\n",
-            "\n",
-            "\n",
-            "\n",
-            "Warning: You have Plotly version 6.0.0, which is not compatible with this version of Kaleido (1.0.0).\n",
-            "\n",
-            "This means that static image generation (e.g. `fig.write_image()`) will not work.\n",
-            "\n",
-            "Please upgrade Plotly to version 6.1.1 or greater, or downgrade Kaleido to version 0.2.1.\n",
-            "\n",
-            "\n",
-            "Setting default log level to \"WARN\".\n",
-            "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-            "25/10/07 20:13:42 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-            "25/10/07 20:14:01 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+            "                                                                                \r"
           ]
         }
       ],
@@ -112,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -165,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -202,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -280,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -331,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -366,7 +352,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 92:>                                                         (0 + 1) / 1]\r"
+            "[Stage 573:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -402,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -440,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -497,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -512,7 +498,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 114:>                                                        (0 + 1) / 1]\r"
+            "[Stage 596:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -549,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -573,7 +559,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 130:>                                                        (0 + 1) / 1]\r"
+            "[Stage 614:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -604,56 +590,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Diagnostics"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "--- This is a diagnostic check, no need to print in the final doc ---\n",
-            "Length of features: 29\n",
-            "Length of coefs: 29\n",
-            "Length of se: 29\n",
-            "Length of tvals: 29\n",
-            "Length of pvals: 29\n"
-          ]
-        }
-      ],
-      "source": [
-        "feature_names = summary._call_java(\"featureNames\")\n",
-        "\n",
-        "\n",
-        "features = [\"Intercept\"] + list(feature_names)\n",
-        "coefs    = [glr_model.intercept] + list(glr_model.coefficients)\n",
-        "se       = list(summary.coefficientStandardErrors)\n",
-        "tvals    = list(summary.tValues)\n",
-        "pvals    = list(summary.pValues)\n",
-        "\n",
-        "\n",
-        "print(\"--- This is a diagnostic check, no need to print in the final doc ---\")\n",
-        "print(\"Length of features:\", len(features))\n",
-        "print(\"Length of coefs:\", len(coefs))\n",
-        "print(\"Length of se:\", len(se))\n",
-        "print(\"Length of tvals:\", len(tvals))\n",
-        "print(\"Length of pvals:\", len(pvals))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "### Tabulate"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -910,7 +852,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 47,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -939,19 +881,26 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Linear Regression Interpretation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Polynomial Regression"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 135:>                                                        (0 + 1) / 1]\r"
+            "[Stage 619:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -1009,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [
         {
@@ -1044,7 +993,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 167:>                                                        (0 + 1) / 1]\r"
+            "[Stage 648:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -1073,7 +1022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
@@ -1111,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -1168,7 +1117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
@@ -1183,7 +1132,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 189:>                                                        (0 + 1) / 1]\r"
+            "[Stage 671:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -1220,7 +1169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
@@ -1244,7 +1193,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 205:>                                                        (0 + 1) / 1]\r"
+            "[Stage 687:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -1275,56 +1224,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Diagnostics"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "--- This is a diagnostic check, no need to print in the final doc ---\n",
-            "Length of features: 30\n",
-            "Length of coefs: 30\n",
-            "Length of se: 30\n",
-            "Length of tvals: 30\n",
-            "Length of pvals: 30\n"
-          ]
-        }
-      ],
-      "source": [
-        "feature_names = poly_summary._call_java(\"featureNames\")\n",
-        "\n",
-        "\n",
-        "poly_features = [\"Intercept\"] + list(feature_names)\n",
-        "poly_coefs    = [poly_glr_max_years_model.intercept] + list(poly_glr_max_years_model.coefficients)\n",
-        "poly_se       = list(poly_summary.coefficientStandardErrors)\n",
-        "poly_tvals    = list(poly_summary.tValues)\n",
-        "poly_pvals    = list(poly_summary.pValues)\n",
-        "\n",
-        "\n",
-        "print(\"--- This is a diagnostic check, no need to print in the final doc ---\")\n",
-        "print(\"Length of features:\", len(poly_features))\n",
-        "print(\"Length of coefs:\", len(poly_coefs))\n",
-        "print(\"Length of se:\", len(poly_se))\n",
-        "print(\"Length of tvals:\", len(poly_tvals))\n",
-        "print(\"Length of pvals:\", len(poly_pvals))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "### Tabulate"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -1589,7 +1494,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 54,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1618,26 +1523,28 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Polynomial Regression Interpretation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Random Forest Regressor"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "25/10/07 20:21:47 WARN DAGScheduler: Broadcasting large task binary with size 1645.3 KiB\n",
-            "25/10/07 20:21:49 WARN DAGScheduler: Broadcasting large task binary with size 2.6 MiB\n",
-            "WARNING: An illegal reflective access operation has occurred                    \n",
-            "WARNING: Illegal reflective access by org.apache.spark.util.SizeEstimator$ (file:/home/ubuntu/assignment-04-BhargaviManyala/.venv/lib/python3.12/site-packages/pyspark/jars/spark-core_2.12-3.5.5.jar) to field java.nio.charset.Charset.name\n",
-            "WARNING: Please consider reporting this to the maintainers of org.apache.spark.util.SizeEstimator$\n",
-            "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-            "WARNING: All illegal access operations will be denied in a future release\n",
-            "[Stage 264:>                                                        (0 + 1) / 1]\r"
+            "25/10/08 03:33:42 WARN DAGScheduler: Broadcasting large task binary with size 1645.3 KiB\n",
+            "25/10/08 03:33:43 WARN DAGScheduler: Broadcasting large task binary with size 2.6 MiB\n",
+            "[Stage 744:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -1696,14 +1603,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_1725/2256788607.py:25: FutureWarning:\n",
+            "/tmp/ipykernel_1651/2256788607.py:25: FutureWarning:\n",
             "\n",
             "\n",
             "\n",
@@ -1804,7 +1711,7 @@
               "7    COMPANY_IS_STAFFING_vec    0.008182"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 56,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1847,12 +1754,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Random Forest Interpretation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Compare 3 Models – GLR, Polynomial, RF"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
@@ -1969,15 +1883,86 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Comparision Interpretation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Calculating Log-Likelihood and BIC for PySpark Models"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 908:>                                                        (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "GLR Log-Likelihood: -46296.42\n",
+            "GLR BIC: 92667.65\n",
+            "\n",
+            "Polynomial Log-Likelihood: -46782.66\n",
+            "Polynomial BIC: 93648.43\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "import math\n",
+        "\n",
+        "def calculate_loglik_bic(summary, n, k):\n",
+        "    dispersion = float(summary.dispersion)\n",
+        "    deviance = float(summary.deviance)\n",
+        "    \n",
+        "    log_likelihood = -0.5 * (\n",
+        "        n * math.log(2 * math.pi) +\n",
+        "        n * math.log(dispersion) +\n",
+        "        (deviance / dispersion)\n",
+        "    )\n",
+        "    bic = k * math.log(n) - 2 * log_likelihood\n",
+        "    return log_likelihood, bic\n",
+        "\n",
+        "# GLR Model\n",
+        "n_glr = regression_train.count()\n",
+        "k_glr = len(assembler.getInputCols()) + 1\n",
+        "logL_glr, bic_glr_ll = calculate_loglik_bic(glr_model.summary, n_glr, k_glr)\n",
+        "\n",
+        "# Polynomial Model\n",
+        "n_poly = polyreg_train.count()\n",
+        "k_poly = len(assembler_poly.getInputCols()) + 1\n",
+        "logL_poly, bic_poly_ll = calculate_loglik_bic(poly_glr_max_years_model.summary, n_poly, k_poly)\n",
+        "\n",
+        "\n",
+        "print(f\"GLR Log-Likelihood: {logL_glr:.2f}\")\n",
+        "print(f\"GLR BIC: {bic_glr_ll:.2f}\\n\")\n",
+        "\n",
+        "print(f\"Polynomial Log-Likelihood: {logL_poly:.2f}\")\n",
+        "print(f\"Polynomial BIC: {bic_poly_ll:.2f}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "###  Log-Likelihood and BIC Interpretation"
+      ]
     }
   ],
   "metadata": {
