added LR interpretation

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -881,7 +881,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Linear Regression Interpretation"
+        "### Linear Regression Interpretation\n",
+        "1. The Generalized Linear Regression (GLR) model achieved an AIC of 92,652.74, demonstrating a moderate fit.\n",
+        "2. Experience variables (MIN_YEARS_EXPERIENCE, MAX_YEARS_EXPERIENCE) have positive coefficients (~+1611), indicating salary increases with experience.\n",
+        "3. Education level plays a key role — \"Ph.D. or professional degree\" (t = 2.04, p = 0.041) has a significant positive effect on salary.\n",
+        "4. Remote work  also show significant positive impacts on salary.\n",
+        "5. Most other predictors have p-values above 0.05, indicating they are not statistically significant on their own, but when combined, they still help the model capture overall salary patterns.\n",
+        "6. Overall, the model indicates that experience, higher education, remote work flexibility, and company type are the strongest salary drivers, but relatively high AIC suggests factors affecting salary are still not explained."
       ]
     },
     {
