added poly reg interpretation

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -1529,7 +1529,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Polynomial Regression Interpretation"
+        "### Polynomial Regression Interpretation\n",
+        "1. The Polynomial model (AIC = 114,711.02) does not perform well statistically, but it helps to show how salary growth changes with experience, for example, salaries increase quickly at first and then level off at higher experience levels.\n",
+        "2. Experience is the strongest factor (t = −7.99, p < 0.001), showing that salaries increase with experience but slow down at higher levels.\n",
+        "3. Company type (t = 4.03, p < 0.001) and remote work flexibility (t = 2.81, p = 0.0049) also have a significant positive effect on salary, while higher education (t = 1.88, p ≈ 0.06) adds a moderate impact.\n",
+        "4. Most other predictors are not individually significant but together help improve model performance.\n",
+        "5. Overall, experience, company type, remote work, and education are the main factors influencing salary."
       ]
     },
     {
