added comparision interpretation

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -1898,7 +1898,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Comparision Interpretation"
+        "### Comparision Interpretation\n",
+        "1. Random Forest Regressor performed the best overall, achieving the lowest RMSE (21,266.70) and MAE (14,848.19), along with the highest R² (0.25), meaning it explains about 25% of the salary variation. \n",
+        "2. Overall, this indicates that Random Forest captures non-linear relationships more effectively compared to other models."
       ]
     },
     {
