added log interpretation

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -1978,7 +1978,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "###  Log-Likelihood and BIC Interpretation"
+        "###  Log-Likelihood and BIC Interpretation\n",
+        "1. The Linear Regression (GLR) model fits the salary data better, with a higher Log-Likelihood (−46,296.42) and a lower BIC (92,667.65) compared to the Polynomial model (−46,782.66).\n",
+        "2. Overall, the GLR model is simpler and more efficient."
       ]
     }
   ],
